fix a bug with z-index of a burger

--- a/css/style.css
+++ b/css/style.css
@@ -337,7 +337,7 @@ span {
     margin: 0 80px;
     align-items: center;
     position: relative;
-    z-index: 1;
+    z-index: 100;
 }
 
 .navigation_header {
